[build-system]
requires = ["setuptools>=61.0", "wheel"] # Specify build system dependencies
build-backend = "setuptools.build_meta"   # Specify the build backend (setuptools)
backend-path = ["."] # Specifies that the backend is in the project root, can be omitted if setup.py is not used with complex logic

[project]
name = "wheeledlab-suite"  # Name of the package
version = "0.1.0"          # Version of the package
description = "A comprehensive suite for wheeled robot simulation and reinforcement learning based on Isaac Lab."
readme = "README.md"       # Path to the README file
requires-python = "~=3.10" # Minimum Python version required
license = { text = "MIT" } # License information
keywords = ["isaaclab", "robotics", "simulation", "reinforcement learning", "wheeled robots"] # Keywords for discoverability
authors = [
    { name = "Wheeled Lab Project Developers" } # Author information
]
maintainers = [
    { name = "Wheeled Lab Project Developers" } # Maintainer information
]
classifiers = [ # PyPI classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [ # Core dependencies for the project
    "isaacsim[all,extscache]==4.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "isaaclab[isaacsim,all]==2.0.2",
    "psutil>=5.9.8",
    "av>=14.4.0",
    "rich>=14.0.0",
    "rsl-rl-lib>=2.3.0",
]

[[tool.uv.index]]
name = "nvidia"
url  = "https://pypi.nvidia.com"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
isaaclab = { index = "nvidia" }

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.setuptools]
# Tells setuptools that top-level packages are in the 'source' directory
package-dir = {"" = "source"}
# To include non-Python data files (like .usd, .json, etc.)
# Option 1: Use include-package-data = true and a MANIFEST.in file
include-package-data = true

[tool.setuptools.packages.find]
where = ["source"]  # Look for packages in the 'source' directory
# Include all packages starting with these names, recursively
include = ["wheeledlab*", "wheeledlab_assets*", "wheeledlab_rl*", "wheeledlab_tasks*"]
# Alternatively, to only include top-level packages:
# packages = ["wheeledlab", "wheeledlab_assets", "wheeledlab_rl", "wheeledlab_tasks"]

# Option 2: Specify package_data directly (more explicit for simple cases)
# [tool.setuptools.package-data]
# "wheeledlab_assets" = ["*.usd", "data/**/*"] # Example: include all .usd files and everything under data/ in wheeledlab_assets
# "wheeledlab_tasks" = ["config/**/*.yaml", "config/**/*.json"] # Example for task config files
